cmake_minimum_required(VERSION 3.28)
project(planning_process)

#设置依赖
set(DEPENDS
  "rclcpp"
  "tf2_ros"
  "tf2"
  "nav_msgs"
  "base_msgs"
)

#添加节点
add_executable(planning_process
  ${CMAKE_CURRENT_SOURCE_DIR}/planning_process_main.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/planning_process.cpp
)

set(target
  planning_process
)

#添加依赖
ament_target_dependencies(${target}
  ${DEPENDS}
)

target_link_libraries(${target}
  config_reader
  decision_center
  vehicle_info
  reference_line
  local_planner
)

#安装动态库、节点相关目录
install(TARGETS
  ${target}
  DESTINATION lib/${PLANNING_PACKAGE_NAME})

